--- a/includes/header.html
+++ b/includes/header.html
@@ -14,7 +14,7 @@
                         <a class="nav-link" href="dicte2.html">Dictée</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">À Propos</a>
+                        <a class="nav-link" href="alphabetik.html">Outil alphabétique</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Portfolio</a>
