--- a/includes/header.html
+++ b/includes/header.html
@@ -17,7 +17,7 @@
                         <a class="nav-link" href="alphabetik.html">Outil alphabétique</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="compter.html">Compter</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
